nuevo JavaScript Nombre

--- a/estilos.css
+++ b/estilos.css
@@ -6,9 +6,10 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+    text-align: center;
 }
 .container{
+    margin: 10px auto;
     width: 80%;
-    margin: auto;
     overflow: hidden;
 }
